fix: 初期読込終了するまで無効にするボタンを増やした

--- a/src/index.html
+++ b/src/index.html
@@ -85,25 +85,25 @@
     <div class="container-fluid d-flex flex-wrap">
         <div class="p-2">
             <button type="button" id="help-button" class="btn btn-outline-info me-2"
-                    data-bs-toggle="modal" data-bs-target="#helpModal">
+                    data-bs-toggle="modal" data-bs-target="#helpModal" disabled>
                 <i class="bi bi-keyboard"></i><span class="ps-2">キーボードショートカット</span>
             </button>
             <button type="button" id="open-common-more-config-button" class="btn btn-outline-light me-2"
-                    data-bs-toggle="modal" data-bs-target="#commonMoreConfigModal">
+                    data-bs-toggle="modal" data-bs-target="#commonMoreConfigModal" disabled>
                 <i class="bi bi-gear-fill"></i><span class="ps-2">環境設定</span>
             </button>
         </div>
         <div class="p-2">
             <button type="button" id="load-params-button" class="btn btn-outline-warning me-2"
-                    data-bs-toggle="modal" data-bs-target="#loadParamsConfirmModal">
+                    data-bs-toggle="modal" data-bs-target="#loadParamsConfirmModal" disabled>
                 <i class="bi bi-folder2-open"></i><span class="ps-2">読込</span>
             </button>
             <button type="button" id="save-params-button" class="btn btn-outline-warning me-2"
-                    data-bs-toggle="modal" data-bs-target="#saveParamsConfirmModal">
+                    data-bs-toggle="modal" data-bs-target="#saveParamsConfirmModal" disabled>
                 <i class="bi bi-save"></i><span class="ps-2">保存</span>
             </button>
             <button type="button" id="delete-params-button" class="btn btn-outline-warning me-2"
-                    data-bs-toggle="modal" data-bs-target="#deleteParamsConfirmModal">
+                    data-bs-toggle="modal" data-bs-target="#deleteParamsConfirmModal" disabled>
                 <i class="bi bi-trash"></i><span class="ps-2">削除</span>
             </button>
         </div>
