--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     <link rel="manifest" href="manifest.json">
     <!--css-->
     <link href="assets/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="assets/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/simple-keyboard.css">
     <link rel="stylesheet" href="assets/index.css?ver=v0.15.0">
     <!--js-->
