update: ウェルカムモーダルを追加

--- a/src/index.html
+++ b/src/index.html
@@ -276,6 +276,22 @@
 </div>
 
 <!-- Modal -->
+<!-- Load Params -->
+<div class="modal" id="welcomeModal" tabindex="-1" aria-labelledby="welcomeModalLabel">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="welcomeModalLabel">Flash Anzan</h5>
+            </div>
+            <div class="modal-body">
+                <p>ようこそ！準備ができたら「はじめる」をクリックしてください。</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">はじめる</button>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- Common More Config -->
 <div class="modal" id="commonMoreConfigModal" tabindex="-1" aria-labelledby="commonMoreConfigModalLabel">
     <div class="modal-dialog modal-dialog-centered">
