chore: バージョン番号を表示

--- a/src/index.html
+++ b/src/index.html
@@ -269,6 +269,9 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid">
+        <span id="version-number" class="text-muted"></span>
+    </div>
     <div class="container display-none">
         <p id="answer-number"></p>
         <p id="number-history-stringify"></p>
