--- a/src/index.html
+++ b/src/index.html
@@ -51,12 +51,7 @@
     <link rel="icon" type="image/png" sizes="24x24" href="favicons/icon-24x24.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/icon-32x32.png">
     <link rel="manifest" href="manifest.json">
-    <!--css-->
-    <link href="assets/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/simple-keyboard.css">
-    <link rel="stylesheet" href="assets/index.css?ver=v0.16.0">
-    <!--js-->
+    <!-- service worker -->
     <script type="module" src="load_sw.js"></script>
 </head>
 <body class="hide-cursor">
