--- a/src/index.html
+++ b/src/index.html
@@ -712,7 +712,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="lib/shortcut.js"></script>
-<script type="module" src="assets/index.js?ver=v0.16.0"></script>
+<script type="text/javascript" src="js/shortcut.js"></script>
+<script type="module" src="js/index.js?ver=v0.16.0"></script>
 </body>
 </html>
