--- a/src/index.html
+++ b/src/index.html
@@ -227,7 +227,7 @@
         </div>
     </div>
     <div class="container-fluid">
-        <span id="version-number" class="text-muted"></span>
+        <span id="version-number" class="text-light"></span>
     </div>
     <div class="container display-none">
         <p id="answer-number"></p>
