refactor: ミュートのチェックボックスと設定値を別タグに分離

--- a/src/index.html
+++ b/src/index.html
@@ -260,8 +260,9 @@
                     <h5 class="mb-3">効果音</h5>
                     <div class="container">
                         <div class="btn-group w-auto mb-2" role="group">
-                            <input type="checkbox" class="btn-check" id="is-muted" autocomplete="off">
-                            <label class="btn btn-outline-danger" for="is-muted" id="audio-status"></label>
+                            <input type="checkbox" class="btn-check" id="is-muted-button" autocomplete="off">
+                            <label class="btn btn-outline-danger" for="is-muted-button" id="audio-status"></label>
+                            <input type="hidden" id="is-muted">
                         </div>
                         <div class="input-group w-auto mb-2">
                             <div class="input-group-prepend">
