--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
             </div>
             <div class="my-2">
                 <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="difficulty-easy" autocomplete="off" checked>
+                    <input type="radio" class="btn-check" name="btnradio" id="difficulty-easy" autocomplete="off">
                     <label class="btn btn-outline-success" for="difficulty-easy">かんたん</label>
                     <input type="radio" class="btn-check" name="btnradio" id="difficulty-normal" autocomplete="off">
                     <label class="btn btn-outline-warning" for="difficulty-normal">ふつう</label>
