update: delete_sw.js を ts に対応

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/icon-32x32.png">
     <link rel="manifest" href="manifest.json">
     <!-- service worker -->
-    <script type="module" src="js/delete_sw.js"></script>
+    <script type="module" src="js/delete_sw.ts"></script>
 </head>
 <body class="hide-cursor">
 <div id="calculate-area" class="calculate-area" data-full-screen="0">
