update: index.js を ts に対応

--- a/src/index.html
+++ b/src/index.html
@@ -706,6 +706,6 @@
         </div>
     </div>
 </div>
-<script type="module" src="js/index.js?ver=v0.20.0"></script>
+<script type="module" src="js/index.ts"></script>
 </body>
 </html>
