update: 出題履歴のセットをモーダル表示直前に行う

--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,7 @@
             <button type="button" id="repeat-button" class="btn btn-danger me-2" disabled>
                 <i class="bi bi-arrow-repeat"></i><span class="ps-2">リトライ</span>
             </button>
-            <button type="button" id="number-history-button" class="btn btn-info me-2"
-                    data-bs-toggle="modal" data-bs-target="#numberHistoryModal" disabled>
+            <button type="button" id="number-history-button" class="btn btn-info me-2" disabled>
                 <i class="bi bi-journal-text"></i>
             </button>
         </div>
