update: タッチデバイスの回答入力処理を最適化

--- a/src/index.html
+++ b/src/index.html
@@ -468,7 +468,7 @@
                             <div class="col-sm-9">
                                 <label for="input-answer-box-touch-display" style="display: none;"></label>
                                 <input type="text" id="input-answer-box-touch-display" inputmode="numeric" class="form-control input-answer-box" autocomplete="off" readonly>
-                                <div class="simple-keyboard"></div>
+                                <div class="input-answer-keyboard-touch"></div>
                                 <input type="hidden" id="input-answer-box-touch-actual">
                             </div>
                             <div class="col-sm-3 d-flex flex-sm-column justify-content-end align-bottom">
