fix: 答え表示時、回線状況によってフォントがちらつくため、フォントをプリロードする

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,9 @@
     <link rel="icon" type="image/png" sizes="24x24" href="favicons/icon-24x24.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/icon-32x32.png">
     <link rel="manifest" href="manifest.json">
+    <!-- preload fonts -->
+    <link rel="preload" href="fonts/ABACUS2.woff" as="font" crossorigin>
+    <link rel="preload" href="fonts/KosugiMaru-Regular.ttf" as="font" crossorigin>
     <!-- service worker -->
     <script type="module" src="js/delete_sw.ts"></script>
 </head>
