fix: PC 版の回答入力エリアに数字以外が入力できていた問題を修正

--- a/src/index.html
+++ b/src/index.html
@@ -459,7 +459,7 @@
                             aria-labelledby="switchInputAnswerBoxTab-keyboard-tab"
                     >
                         <label for="input-answer-box" style="display: none;"></label>
-                        <input type="text" id="input-answer-box" inputmode="numeric" class="form-control input-answer-box" autocomplete="off">
+                        <input type="number" id="input-answer-box" inputmode="numeric" class="form-control input-answer-box" autocomplete="off">
                     </div>
                     <div
                             class="tab-pane"
