fix: スマホ版回答欄にフォーカスできないようにする

--- a/src/index.html
+++ b/src/index.html
@@ -469,8 +469,7 @@
                     >
                         <div class="row">
                             <div class="col-sm-9">
-                                <label for="input-answer-box-touch-display" style="display: none;"></label>
-                                <input type="text" id="input-answer-box-touch-display" inputmode="numeric" class="form-control input-answer-box" autocomplete="off" readonly>
+                                <div id="input-answer-box-touch-display" class="form-control input-answer-box"></div>
                                 <div class="input-answer-keyboard-touch"></div>
                                 <input type="hidden" id="input-answer-box-touch-actual">
                             </div>
