update: 終了ボタンを設置

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,9 @@
 <div class="operation-panel">
     <div class="container-fluid d-flex flex-wrap">
         <div class="p-2">
+            <button type="button" id="quit-button" class="btn btn-outline-danger me-2" disabled>
+                <i class="bi bi-x"></i><span class="ps-2">終了</span>
+            </button>
             <button type="button" id="help-button" class="btn btn-outline-info me-2"
                     data-bs-toggle="modal" data-bs-target="#helpModal" disabled>
                 <i class="bi bi-keyboard"></i><span class="ps-2">キーボードショートカット</span>
