chore: 仮タイトルを付ける

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flash Anzan</title>
+    <title>おーろら★ふらっしゅ</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-    <meta name="description" content="フラッシュ暗算">
+    <meta name="description" content="連続で表示される数字を足し算するゲーム">
     <meta name="theme-color" content="limegreen">
     <!--icons-->
     <meta name="msapplication-square70x70logo" content="favicons/site-tile-70x70.png">
