update: アプリ名をビルド時に埋め込むようにする

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>おーろら★ふらっしゅ</title>
+    <!-- Set when build -->
+    <title></title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <meta name="description" content="連続で表示される数字を足し算するゲーム">
     <meta name="theme-color" content="limegreen">
@@ -237,12 +238,12 @@
 </div>
 
 <!-- Modal -->
-<!-- Load Params -->
+<!-- Welcome -->
 <div class="modal" id="welcomeModal" tabindex="-1" aria-labelledby="welcomeModalLabel">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="welcomeModalLabel">Flash Anzan</h5>
+                <h5 class="modal-title" id="welcomeModalLabel"><span class="app-name-embedded"></span></h5>
             </div>
             <div class="modal-body">
                 <p>ようこそ！準備ができたら「はじめる」をクリックしてください。</p>
@@ -319,7 +320,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="loadParamsConfirmModalLabel">Flash Anzan</h5>
+                <h5 class="modal-title" id="loadParamsConfirmModalLabel"><span class="app-name-embedded"></span></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -339,7 +340,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="loadParamsCompletedModalLabel">Flash Anzan</h5>
+                <h5 class="modal-title" id="loadParamsCompletedModalLabel"><span class="app-name-embedded"></span></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -353,7 +354,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="saveParamsConfirmModalLabel">Flash Anzan</h5>
+                <h5 class="modal-title" id="saveParamsConfirmModalLabel"><span class="app-name-embedded"></span></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -373,7 +374,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="saveParamsCompletedModalLabel">Flash Anzan</h5>
+                <h5 class="modal-title" id="saveParamsCompletedModalLabel"><span class="app-name-embedded"></span></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -387,7 +388,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="deleteParamsConfirmModalLabel">Flash Anzan</h5>
+                <h5 class="modal-title" id="deleteParamsConfirmModalLabel"><span class="app-name-embedded"></span></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -407,7 +408,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="deleteParamsCompletedModalLabel">Flash Anzan</h5>
+                <h5 class="modal-title" id="deleteParamsCompletedModalLabel"><span class="app-name-embedded"></span></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -525,7 +526,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Flash Anzan</h5>
+                <h5 class="modal-title"><span class="app-name-embedded"></span></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
