update: サイトの説明を動的に埋め込む

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- Set when build -->
-    <title></title>
+    <title></title><!-- Set when build -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-    <meta name="description" content="連続で表示される数字を足し算するゲーム">
+    <meta name="description" content=""><!-- Set when build -->
     <meta name="theme-color" content="limegreen">
     <!--icons-->
     <meta name="msapplication-square70x70logo" content="favicons/site-tile-70x70.png">
