--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,10 @@
                 <p>ようこそ！準備ができたら「はじめる」をクリックしてください。</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">はじめる</button>
+                <button type="button" class="btn btn-primary">
+                    <span class="d-none spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <span class="button-text">はじめる</span>
+                </button>
             </div>
         </div>
     </div>
