update: 初期状態で有効にするボタンを html 上にベタ書きする

--- a/src/index.html
+++ b/src/index.html
@@ -68,34 +68,34 @@
     <div class="container-fluid d-flex flex-wrap">
         <div class="p-2">
             <button type="button" id="quit-button" class="btn btn-outline-danger me-2"
-                    data-bs-toggle="modal" data-bs-target="#comfirmQuitModal" disabled>
+                    data-bs-toggle="modal" data-bs-target="#comfirmQuitModal">
                 <i class="bi bi-x"></i><span class="ps-2">終了</span>
             </button>
             <button type="button" id="help-button" class="btn btn-outline-info me-2"
-                    data-bs-toggle="modal" data-bs-target="#helpModal" disabled>
+                    data-bs-toggle="modal" data-bs-target="#helpModal">
                 <i class="bi bi-keyboard"></i><span class="ps-2">キーボードショートカット</span>
             </button>
             <button type="button" id="open-common-more-config-button" class="btn btn-outline-light me-2"
-                    data-bs-toggle="modal" data-bs-target="#commonMoreConfigModal" disabled>
+                    data-bs-toggle="modal" data-bs-target="#commonMoreConfigModal">
                 <i class="bi bi-gear-fill"></i><span class="ps-2">環境設定</span>
             </button>
         </div>
         <div class="p-2">
             <button type="button" id="load-params-button" class="btn btn-outline-warning me-2"
-                    data-bs-toggle="modal" data-bs-target="#loadParamsConfirmModal" disabled>
+                    data-bs-toggle="modal" data-bs-target="#loadParamsConfirmModal">
                 <i class="bi bi-folder2-open"></i><span class="ps-2">読込</span>
             </button>
             <button type="button" id="save-params-button" class="btn btn-outline-warning me-2"
-                    data-bs-toggle="modal" data-bs-target="#saveParamsConfirmModal" disabled>
+                    data-bs-toggle="modal" data-bs-target="#saveParamsConfirmModal">
                 <i class="bi bi-save"></i><span class="ps-2">保存</span>
             </button>
             <button type="button" id="delete-params-button" class="btn btn-outline-warning me-2"
-                    data-bs-toggle="modal" data-bs-target="#deleteParamsConfirmModal" disabled>
+                    data-bs-toggle="modal" data-bs-target="#deleteParamsConfirmModal">
                 <i class="bi bi-trash"></i><span class="ps-2">削除</span>
             </button>
         </div>
         <div class="p-2">
-            <button type="button" id="start-button" class="btn btn-danger me-2" disabled>
+            <button type="button" id="start-button" class="btn btn-danger me-2">
                 <i class="bi bi-play-fill"></i><span class="ps-2">スタート</span>
             </button>
             <button type="button" id="repeat-button" class="btn btn-danger me-2" disabled>
